clear all cell outputs ; remove 'a suivre' links

--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -62,15 +62,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class '__main__.Vecteur'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    pass\n",
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -106,15 +98,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Vecteur object at 0x10402ccf8> <__main__.Vecteur object at 0x10402ccc0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = Vecteur()\n",
     "w = Vecteur()\n",
@@ -170,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -181,15 +165,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v.x, v.y, v.z = 1, 2, 3\n",
     "print(v.x, v.y, v.z)"
@@ -197,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -210,19 +186,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Vecteur' object has no attribute 'z'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-dc6d48684f2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute 'z'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "del v.z\n",
     "print(v.x, v.y, v.z)"
@@ -268,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -279,15 +243,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    pass\n",
@@ -315,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -328,15 +284,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9 -12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "homothetie(v, 3)\n",
     "affiche(v)"
@@ -371,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -382,15 +330,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    def init(self, x=0, y=0):\n",
@@ -417,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -430,15 +370,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9 -12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v.homothetie(3)\n",
     "v.affiche()"
@@ -490,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -501,15 +433,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 -4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    \n",
@@ -530,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -538,26 +462,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Vecteur' object has no attribute 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-803e9cbb3045>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute 'x'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(v.x, v.y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -569,19 +481,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Vecteur' object has no attribute '__x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-c47afd86a16b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute '__x'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(v.__x, v.__y)"
    ]
@@ -636,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -647,15 +547,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Documentation de MaClasse :-)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MaClasse(object):\n",
     "    \"Documentation de MaClasse :-)\"\n",
@@ -668,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -679,22 +571,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "documentation de ma_methode()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(MaClasse.ma_methode.__doc__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -708,33 +592,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class MaClasse in module __main__:\n",
-      "\n",
-      "class MaClasse(builtins.object)\n",
-      " |  Documentation de MaClasse :-)\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  ma_methode()\n",
-      " |      documentation de ma_methode()\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(MaClasse)"
    ]
@@ -743,15 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A suivre..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#1/6-:-La-d%C3%A9finition-de-classes)  \n",
-    "[Méthodes spéciales](synope_objets_2_methodes_speciales.ipynb)"
+    "## A propos des auteurs"
    ]
   },
   {
@@ -762,114 +612,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-       "\n",
-       "<style>\n",
-       "\n",
-       "h1, h2, h3, h4, h5 {\n",
-       "    font-family: 'Alegreya Sans', sans-serif;\n",
-       "}\n",
-       "\n",
-       "div.text_cell_render{\n",
-       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-       "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
-       "    width:100%;/*600px;*/\n",
-       "    /*margin-left:auto;*/\n",
-       "    /*margin-right:auto;*/\n",
-       "}\n",
-       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
-       "\n",
-       "/* header colours and fonts */\n",
-       ".rendered_html h1 {\n",
-       "    color:#9A3334;\n",
-       "    /*margin-top: 0.5em;*/\n",
-       "    padding: 1em;\n",
-       "    display: block;\n",
-       "    font-size: 40px;\n",
-       "    text-align: center;\n",
-       "    border-top: 2px solid #9A3334;\n",
-       "    border-bottom: 2px solid #9A3334;\n",
-       "}\n",
-       "\n",
-       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
-       ".rendered_html h2 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-style: italic;\n",
-       "    font-weight: normal;\n",
-       "    font-size: 30px;\n",
-       "    /*text-align: center;*/\n",
-       "    border-bottom: 1px solid #9A3334;\n",
-       "}\n",
-       ".rendered_html h3 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-weight: normal;\n",
-       "    font-size: 25px;\n",
-       "    font-style: italic;\n",
-       "}\n",
-       "\n",
-       ".rendered_html h4 {\n",
-       "    border: 2px solid #9A3334;\n",
-       "    border-radius: 25px;\n",
-       "    font-style: italic;\n",
-       "    height:5%;\n",
-       "    width:15%;\n",
-       "    padding:5px;\n",
-       "    text-align: center;\n",
-       "}\n",
-       "\n",
-       "div.prompt {\n",
-       "    display: None;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".ui-wrapper {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".video {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       ".rendered_html img {\n",
-       "    margin-top: 0em;\n",
-       "}\n",
-       "\n",
-       "div.input_area {\n",
-       "    border-radius: 10px;\n",
-       "}\n",
-       "\n",
-       "/*.reveal h1 {\n",
-       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
@@ -896,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
