--- a/python/session-2016-03-idf/2_modules/theorie/synope_modules_1_modules.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/synope_modules_1_modules.ipynb
@@ -108,11 +108,7 @@
     "- Elles sont exécutées seulement lors du premier *import* du module (pour forcer le rechargement, il faut utiliser *reload()*)\n",
     "- Chaque module possède son propre espace de nommage (ou table de nommage) «privé» qui est global pour toutes les fonctions de ce même module. Les variables sont accessibles via la notation «nommodule.nomvariable» (comme pour une fonction)\n",
     "- Un module peut importer d’autres modules. Par convention, on place tous les imports au début du module.\n",
-<<<<<<< HEAD
-    "- L’instruction «import» crée un objet de type module contenant toutes les données et fonctions du module, et ajoute une variable désignant ce module au sein de l’espace de nommage du programme/module/interpéteur qui fait l’import. Il existe une variante qui permet d’importer directement dans la table de nommage un ou des éléments particuliers du module : \n",
-=======
-    "- L’instruction «import» crée un objet de type module contenant toutes les données et fonctions du module, et ajoute une variable désignant ce module au sein de l’espace de nommage du programme/module/interpéteur qui fait l’import. Il existe une variante qui permet d’importer directement dans la table de nommage un ou des éléments particuliers du module :\n",
->>>>>>> e3702a09e092537adf954b18a181cf65a2ce4485
+    "- L’instruction «import» crée un objet de type module contenant toutes les données et fonctions du module, et ajoute une variable désignant ce module au sein de l’espace de nommage du programme/module/interpréteur qui fait l’import. Il existe une variante qui permet d’importer directement dans la table de nommage un ou des éléments particuliers du module :\n",
     "```python\n",
     "from module import nom\n",
     "```\n",
@@ -123,11 +119,7 @@
     "1 1 2 3 5 8 13 21 34 55 89 144 233 377\n",
     "```\n",
     "_Dans cet exemple, fib et fib2 sont ajoutés dans la table de nommage locale. Fibo n’est pas défini.\n",
-<<<<<<< HEAD
     "On peut aussi utiliser le symbole \\* qui va importer toute la table de nommage sauf ceux dont le nom commence par un tiret-bas_ *(underscore : _ )*. _Il conseillé d'éviter l'utilisation de l'instruction `import *` qui peut conduire à des problèmes avec la table de nommage si des éléments ont le même nom._"
-=======
-    "On peut aussi utiliser le symbole \\* qui va importer toute la table de nommage sauf ceux dont le nom commence par un tiret-bas_ *(underscore : _ )*"
->>>>>>> e3702a09e092537adf954b18a181cf65a2ce4485
    ]
   },
   {
@@ -477,18 +469,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "## A suivre...\n",
-    "\n",
-    "[Travaux pratiques](../ellipsoides/enonce/synope_modules_tp.ipynb)  \n",
-    "[Paquets](synope_modules_2_paquets.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## A propos des auteurs\n",
@@ -508,125 +488,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-       "\n",
-       "<style>\n",
-       "\n",
-       "h1, h2, h3, h4, h5 {\n",
-       "    font-family: 'Alegreya Sans', sans-serif;\n",
-       "}\n",
-       "\n",
-       "div.text_cell_render{\n",
-       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-       "    line-height: 135%;\n",
-       "    font-size: 140%;\n",
-       "    width:100%;/*600px;*/\n",
-       "    /*margin-left:auto;*/\n",
-       "    /*margin-right:auto;*/\n",
-       "}\n",
-       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
-       "\n",
-       "/* header colours and fonts */\n",
-       ".rendered_html h1 {\n",
-       "    color:#9A3334;\n",
-       "    /*margin-top: 0.5em;*/\n",
-       "    padding: 1em;\n",
-       "    display: block;\n",
-       "    font-size: 40px;\n",
-       "    text-align: center;\n",
-       "    border-top: 2px solid #9A3334;\n",
-       "    border-bottom: 2px solid #9A3334;\n",
-       "}\n",
-       "\n",
-       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
-       ".rendered_html h2 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-style: italic;\n",
-       "    font-weight: normal;\n",
-       "    font-size: 30px;\n",
-       "    /*text-align: center;*/\n",
-       "    border-bottom: 1px solid #9A3334;\n",
-       "}\n",
-       ".rendered_html h3 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-weight: normal;\n",
-       "    font-size: 25px;\n",
-       "    font-style: italic;\n",
-       "}\n",
-       "\n",
-       ".rendered_html h4 {\n",
-       "    border: 2px solid #9A3334;\n",
-       "    border-radius: 25px;\n",
-       "    font-style: italic;\n",
-       "    height:5%;\n",
-       "    width:20%;\n",
-       "    padding:5px;\n",
-       "    text-align: center;\n",
-       "}\n",
-       "\n",
-       "div.prompt {\n",
-       "    display: None;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".ui-wrapper {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".video {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       ".rendered_html img {\n",
-       "    margin-top: 0em;\n",
-       "}\n",
-       "\n",
-       "div.input_area {\n",
-       "    border-radius: 10px;\n",
-       "}\n",
-       "\n",
-       ".reveal h1 {\n",
-       "    font-size: 70px;\n",
-       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}\n",
-       "\n",
-       ".reveal h2 {\n",
-       "    font-size: 50px;\n",
-       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}\n",
-       "\n",
-       ".reveal h3 {\n",
-       "    font-size: 50px;\n",
-       "    \n",
-       "}\n",
-       "\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
@@ -653,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
