--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -57,15 +57,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    # Notez la différence avec C++, Java ou PHP sur la déclaration de attributs\n",
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -98,15 +90,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-2 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v2 = Vecteur(-2, 7)\n",
     "print( v2.getx(), v2.gety() )"
@@ -186,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -194,15 +178,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3,4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    def __init__(self, u=0, v=0):\n",
@@ -273,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -281,16 +257,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "[2, 4, 6, 8, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class FonctionLineaire(object):\n",
     "    def __init__(self, constant):\n",
@@ -349,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -357,15 +324,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-2,10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    def __init__(self,u=0,v=0):\n",
@@ -414,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -422,15 +381,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MonTexte(object):\n",
     "    def __init__(self,value):\n",
@@ -446,19 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ruojnoB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(txt[::-1])"
    ]
@@ -477,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -485,21 +428,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B\n",
-      "o\n",
-      "n\n",
-      "j\n",
-      "o\n",
-      "u\n",
-      "r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for c in txt:\n",
     "    print(c)"
@@ -519,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -527,25 +456,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'i' in txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -553,25 +471,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['B', 'o', 'n', 'j', 'o', 'u', 'r']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[c for c in txt]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -579,25 +486,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[66, 111, 110, 106, 111, 117, 114]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(map(ord, txt))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -605,18 +501,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('n', 'o', 'B')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(c1, c2, c3, c4, c5, c6, c7) = txt\n",
     "c3, c2, c1"
@@ -624,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -632,20 +517,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['B', 'o', 'n', 'j', 'o', 'u', 'r'],\n",
-       " ('B', 'o', 'n', 'j', 'o', 'u', 'r'),\n",
-       " 'B-o-n-j-o-u-r')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(txt), tuple(txt), '-'.join(txt)"
    ]
@@ -654,17 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A suivre..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#2/6-:-Les-m%C3%A9thodes-sp%C3%A9ciales)  \n",
-    "[Composition](synope_objets_3_composition.ipynb)"
+    "## A propos des auteurs"
    ]
   },
   {
@@ -675,114 +537,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-       "\n",
-       "<style>\n",
-       "\n",
-       "h1, h2, h3, h4, h5 {\n",
-       "    font-family: 'Alegreya Sans', sans-serif;\n",
-       "}\n",
-       "\n",
-       "div.text_cell_render{\n",
-       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-       "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
-       "    width:100%;/*600px;*/\n",
-       "    /*margin-left:auto;*/\n",
-       "    /*margin-right:auto;*/\n",
-       "}\n",
-       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
-       "\n",
-       "/* header colours and fonts */\n",
-       ".rendered_html h1 {\n",
-       "    color:#9A3334;\n",
-       "    /*margin-top: 0.5em;*/\n",
-       "    padding: 1em;\n",
-       "    display: block;\n",
-       "    font-size: 40px;\n",
-       "    text-align: center;\n",
-       "    border-top: 2px solid #9A3334;\n",
-       "    border-bottom: 2px solid #9A3334;\n",
-       "}\n",
-       "\n",
-       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
-       ".rendered_html h2 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-style: italic;\n",
-       "    font-weight: normal;\n",
-       "    font-size: 30px;\n",
-       "    /*text-align: center;*/\n",
-       "    border-bottom: 1px solid #9A3334;\n",
-       "}\n",
-       ".rendered_html h3 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-weight: normal;\n",
-       "    font-size: 25px;\n",
-       "    font-style: italic;\n",
-       "}\n",
-       "\n",
-       ".rendered_html h4 {\n",
-       "    border: 2px solid #9A3334;\n",
-       "    border-radius: 25px;\n",
-       "    font-style: italic;\n",
-       "    height:5%;\n",
-       "    width:15%;\n",
-       "    padding:5px;\n",
-       "    text-align: center;\n",
-       "}\n",
-       "\n",
-       "div.prompt {\n",
-       "    display: None;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".ui-wrapper {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".video {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       ".rendered_html img {\n",
-       "    margin-top: 0em;\n",
-       "}\n",
-       "\n",
-       "div.input_area {\n",
-       "    border-radius: 10px;\n",
-       "}\n",
-       "\n",
-       "/*.reveal h1 {\n",
-       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
@@ -809,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
