--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -56,15 +56,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0 0.0 0.0 10.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object): pass\n",
     "class Impulsion(object) : pass\n",
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -120,15 +112,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0|0|0|0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    def __init__(self):\n",
@@ -194,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -202,15 +186,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0|0|0|1), (0|0|0|1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i2 = i1\n",
     "i2.masse = 1\n",
@@ -238,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -246,15 +222,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0|0|0|2), (0|0|0|1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "i2 = copy.copy(i1)\n",
@@ -276,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -284,15 +252,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0|0|0|2), (0|0|0|1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i2 = Impulsion()\n",
     "i2.vitesse = i1.vitesse # i2 = copy.copy(i1)\n",
@@ -322,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -330,15 +290,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0|0|2|2), (0|0|2|1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i2.vitesse.z = 2\n",
     "print(\"({}), ({})\".format(i2, i1))"
@@ -358,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -366,15 +318,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0|3|2|1), (0|0|2|1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i2 = copy.deepcopy(i1)\n",
     "i2.vitesse.y = 3\n",
@@ -414,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -422,18 +366,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False, False, True)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    def __init__(self, x=0, y=0, z=0):\n",
@@ -454,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -462,18 +395,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False, True, False)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
     "    def __init__(self, x=0, y=0, z=0):\n",
@@ -500,15 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A suivre..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#3/6-:-Les-objets-compos%C3%A9s)  \n",
-    "[Héritage](synope_objets_4_heritage.ipynb)"
+    "## A propos des auteurs"
    ]
   },
   {
@@ -519,114 +433,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-       "\n",
-       "<style>\n",
-       "\n",
-       "h1, h2, h3, h4, h5 {\n",
-       "    font-family: 'Alegreya Sans', sans-serif;\n",
-       "}\n",
-       "\n",
-       "div.text_cell_render{\n",
-       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-       "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
-       "    width:100%;/*600px;*/\n",
-       "    /*margin-left:auto;*/\n",
-       "    /*margin-right:auto;*/\n",
-       "}\n",
-       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
-       "\n",
-       "/* header colours and fonts */\n",
-       ".rendered_html h1 {\n",
-       "    color:#9A3334;\n",
-       "    /*margin-top: 0.5em;*/\n",
-       "    padding: 1em;\n",
-       "    display: block;\n",
-       "    font-size: 40px;\n",
-       "    text-align: center;\n",
-       "    border-top: 2px solid #9A3334;\n",
-       "    border-bottom: 2px solid #9A3334;\n",
-       "}\n",
-       "\n",
-       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
-       ".rendered_html h2 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-style: italic;\n",
-       "    font-weight: normal;\n",
-       "    font-size: 30px;\n",
-       "    /*text-align: center;*/\n",
-       "    border-bottom: 1px solid #9A3334;\n",
-       "}\n",
-       ".rendered_html h3 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-weight: normal;\n",
-       "    font-size: 25px;\n",
-       "    font-style: italic;\n",
-       "}\n",
-       "\n",
-       ".rendered_html h4 {\n",
-       "    border: 2px solid #9A3334;\n",
-       "    border-radius: 25px;\n",
-       "    font-style: italic;\n",
-       "    height:5%;\n",
-       "    width:15%;\n",
-       "    padding:5px;\n",
-       "    text-align: center;\n",
-       "}\n",
-       "\n",
-       "div.prompt {\n",
-       "    display: None;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".ui-wrapper {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".video {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       ".rendered_html img {\n",
-       "    margin-top: 0em;\n",
-       "}\n",
-       "\n",
-       "div.input_area {\n",
-       "    border-radius: 10px;\n",
-       "}\n",
-       "\n",
-       "/*.reveal h1 {\n",
-       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
@@ -653,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
