--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_3_logging.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_3_logging.ipynb
@@ -30,14 +30,14 @@
     }
    },
    "source": [
-    "## Pourquoi utiliser les logs\n",
+    "## Pourquoi utiliser les logs ?\n",
     "\n",
     "- suivre le bon fonctionnement d'un programme\n",
-    "    + trouver plus facilement la source d'une erreur\n",
-    "    + si vous diffusez un de vos codes et qu'il ne se comporte pas correctement, l'utilisateur peut vous envoyer les fichiers de logs pour comprendre la source de l'erreur\n",
+    "    + trouver plus facilement la source d'une erreur,\n",
+    "    + si vous diffusez un de vos codes et qu'il ne se comporte pas correctement, l'utilisateur peut vous envoyer les fichiers de logs pour comprendre la source de l'erreur.\n",
     "- normaliser le format de sortie\n",
     "- séparer les erreurs selon leurs niveaux de criticité\n",
-    "- eviter d'écrire lors du développement de nombreux ```print()``` pour le débuggage qui devrons être supprimés pour le passage en production"
+    "- éviter d'écrire lors du développement de nombreux ```print()``` pour le débuggage qui devront être supprimés pour le passage en production"
    ]
   },
   {
@@ -58,11 +58,11 @@
     "    + vers syslog\n",
     "    + ...\n",
     "- 5 niveaux de logs disponibles :\n",
-    "    + **DEBUG** : informations nécessaires pour le débuggage (ex : contenu d'un dictionnaire)\n",
-    "    + **INFO** : informations du les étapes de traitement (ex : lecture du fichier de données data.txt)\n",
-    "    + **WARNING** : détection d'une situation rare\n",
-    "    + **ERROR** : un traitement s'est mal passé mais n'a pas conduit à l'arrêt du programme\n",
-    "    + **CRITICAL** : une erreur s'est produite conduisant à l'arrêt du programme"
+    "    + **DEBUG** : informations nécessaires pour le débuggage (ex : contenu d'un dictionnaire).\n",
+    "    + **INFO** : informations sur les étapes de traitement (ex : lecture du fichier de données data.txt).\n",
+    "    + **WARNING** : détection d'une situation rare.\n",
+    "    + **ERROR** : un traitement s'est mal passé mais n'a pas conduit à l'arrêt du programme.\n",
+    "    + **CRITICAL** : une erreur s'est produite conduisant à l'arrêt du programme."
    ]
   },
   {
@@ -91,9 +91,9 @@
    "source": [
     "## Configuration du module logging\n",
     "\n",
-    "- la configuration de ce module n'est pas toujours facile car la documentation est compliqué\n",
+    "- la configuration de ce module n'est pas toujours facile car la documentation est compliquée\n",
     "- un modèle de configuration type a été défini par la communauté django\n",
-    "    - on créé un dictionnaire contenant la configuration du looger\n",
+    "    - on crée un dictionnaire contenant la configuration du looger\n",
     "    - à partir de cette configuration, on défini un object logger\n",
     "    \n",
     "- Nous allons voir ci-dessous un exemple de configuration qui sauve les logs : \n",
@@ -160,13 +160,13 @@
     "    + name : le nom du programme\n",
     "    + levelname : le niveau du log\n",
     "    + message : le message qui va être affiché\n",
-    "- la clé __handlers__ permet de définir les différents sortie dans lesquelles les logs vont être écrits\n",
-    "    + pour la console on utilise la class de handler ```logging.streamHandler```\n",
-    "    + pour le fichier c'est la classe ```logging.FileHandler```\n",
-    "        * on défini aussi le nom du fichier de log avec la clé __'filename'__\n",
-    "        * on pourrait aussi utiliser la class ```logging.handlers.RotatingFileHandler``` pour faire de la rotation de fichier\n",
+    "- la clé __handlers__ permet de définir les différentes sorties dans lesquelles les logs vont être écrits\n",
+    "    + pour la console, on utilise la classe ```logging.streamHandler```\n",
+    "    + pour le fichier, on utilise la classe ```logging.FileHandler```\n",
+    "        * on définit aussi le nom du fichier de log avec la clé __'filename'__\n",
+    "        * on pourrait aussi utiliser la classe ```logging.handlers.RotatingFileHandler``` pour faire de la rotation de fichiers\n",
     "- la clé __loggers __ pour notre utilisation aura toujours ce format\n",
-    "    + on définit seulement le nom des __handlers__ qui vont être utilisé\n",
+    "    + on définit seulement le nom des __handlers__ qui vont être utilisés\n",
     "    + on place toujours le niveau de ce root logger au niveau debug"
    ]
   },
@@ -180,7 +180,7 @@
    "source": [
     "## Utilisation de l'objet logger\n",
     "\n",
-    "Dans les fonctions, on peut ensuite utiliser cet object pour sauvegarder les logs\n",
+    "Dans les fonctions, on peut ensuite utiliser cet objet pour sauvegarder les logs\n",
     "\n",
     "```python\n",
     "logger.debug(\"message de niveau debug\")\n",
@@ -320,21 +320,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
