--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_4_doc.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_4_doc.ipynb
@@ -33,10 +33,11 @@
    "source": [
     "## Pourquoi documenter ?\n",
     "\n",
-    "- comprendre de que l'on a fait\n",
-    "- expliquer aux utilisateurs comment utiliser notre codes\n",
-    "- faciliter la maintenance du code\n",
-    "- faciliter la réutilisation du code"
+    "- comprendre ce que l'on a fait,\n",
+    "- expliquer aux utilisateurs comment utiliser notre code,\n",
+    "- faciliter la maintenance du code,\n",
+    "- faciliter la réutilisation du code,\n",
+    "- ..."
    ]
   },
   {
@@ -47,16 +48,16 @@
     }
    },
    "source": [
-    "## La documentation en python\n",
+    "## La documentation en Python\n",
     "\n",
-    "- la convention de documentation est défini dans le [PEP 257](https://www.python.org/dev/peps/pep-0257/)\n",
-    "- les commentaires sont appelés __docstring__ (chaîne de documentation\n",
-    "- l'outil pylint vu dans la première partie peut afficher des alertes si les fonctions et les classes ne contiennent pas de docstring\n",
-    "- les docstring sont sont placées entre des ```\"\"\"``` après la définition de la fonction\n",
+    "- La convention de documentation est définie dans le [PEP 257](https://www.python.org/dev/peps/pep-0257/).\n",
+    "- Les commentaires sont appelés __docstring__.\n",
+    "- L'outil pylint vu dans la première partie peut afficher des alertes si les fonctions et les classes ne contiennent pas de docstring.\n",
+    "- Les docstring sont placées entre des ```\"\"\"``` après la définition de la fonction.\n",
     "\n",
     "```python\n",
     "def ma_fonction(argument_1, argument_2):\n",
-    "    \"\"\"multiplie deux nombres et retourne le résultats\"\"\"\n",
+    "    \"\"\"multiplie deux nombres et retourne le résultat\"\"\"\n",
     "    \n",
     "    return argument_1 * argument_2\n",
     "\n",
@@ -73,10 +74,10 @@
    "source": [
     "## Les avantages des docstrings\n",
     "\n",
-    "- on peut afficher les docstrings avec la fonction ```help()```\n",
-    "- les IDEs savent afficher cette documentation\n",
-    "- comme vu dans la partie 2 on peut intégrer des tests dans la docstring\n",
-    "- la fonction pydoc permet d'afficher la documentation comme la commande ```man``` du shell"
+    "- On peut afficher les docstrings avec la fonction ```help()```.\n",
+    "- Les IDEs savent afficher cette documentation.\n",
+    "- Comme vu dans la partie 2, on peut intégrer des tests dans la docstring.\n",
+    "- La fonction pydoc permet d'afficher la documentation comme la commande ```man``` du shell."
    ]
   },
   {
@@ -93,25 +94,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on built-in function print in module builtins:\n",
-      "\n",
-      "print(...)\n",
-      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
-      "    \n",
-      "    Prints the values to a stream, or to sys.stdout by default.\n",
-      "    Optional keyword arguments:\n",
-      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
-      "    sep:   string inserted between values, default a space.\n",
-      "    end:   string appended after the last value, default a newline.\n",
-      "    flush: whether to forcibly flush the stream.\n",
-      "\n"
+      "The \"print\" statement\r\n",
+      "*********************\r\n",
+      "\r\n",
+      "   print_stmt ::= \"print\" ([expression (\",\" expression)* [\",\"]]\r\n",
+      "                  | \">>\" expression [(\",\" expression)+ [\",\"]])\r\n",
+      "\r\n",
+      "\"print\" evaluates each expression in turn and writes the resulting\r\n",
+      "object to standard output (see below).  If an object is not a string,\r\n",
+      "it is first converted to a string using the rules for string\r\n",
+      "conversions.  The (resulting or original) string is then written.  A\r\n",
+      "space is written before each object is (converted and) written, unless\r\n",
+      "the output system believes it is positioned at the beginning of a\r\n",
+      "line.  This is the case (1) when no characters have yet been written\r\n",
+      "to standard output, (2) when the last character written to standard\r\n",
+      "output is a whitespace character except \"' '\", or (3) when the last\r\n",
+      "write operation on standard output was not a \"print\" statement. (In\r\n",
+      "some cases it may be functional to write an empty string to standard\r\n",
+      "output for this reason.)\r\n",
+      "\r\n",
+      "Note: Objects which act like file objects but which are not the\r\n",
+      "  built-in file objects often do not properly emulate this aspect of\r\n",
+      "  the file object's behavior, so it is best not to rely on this.\r\n",
+      "\r\n",
+      "A \"'\\n'\" character is written at the end, unless the \"print\" statement\r\n",
+      "ends with a comma.  This is the only action if the statement contains\r\n",
+      "just the keyword \"print\".\r\n",
+      "\r\n",
+      "Standard output is defined as the file object named \"stdout\" in the\r\n",
+      "built-in module \"sys\".  If no such object exists, or if it does not\r\n",
+      "have a \"write()\" method, a \"RuntimeError\" exception is raised.\r\n",
+      "\r\n",
+      "\"print\" also has an extended form, defined by the second portion of\r\n",
+      "the syntax described above. This form is sometimes referred to as\r\n",
+      "\"\"print\" chevron.\" In this form, the first expression after the \">>\"\r\n",
+      "must evaluate to a \"file-like\" object, specifically an object that has\r\n",
+      "a \"write()\" method as described above.  With this extended form, the\r\n",
+      "subsequent expressions are printed to this file object.  If the first\r\n",
+      "expression evaluates to \"None\", then \"sys.stdout\" is used as the file\r\n",
+      "for output.\r\n",
+      "\r\n"
      ]
     }
    ],
    "source": [
-    "%%bash\n",
-    "\n",
-    "pydoc print"
+    "!pydoc print"
    ]
   },
   {
@@ -124,7 +151,7 @@
    "source": [
     "## Les bonnes pratiques\n",
     "\n",
-    "- docstring d'une ligne\n",
+    "- documentation sur une ligne\n",
     "\n",
     "```python\n",
     "def ma_fonction():\n",
@@ -145,8 +172,8 @@
     "    return arg_1 * arg_2\n",
     "```\n",
     "\n",
-    "- les docstrings ne devraient pas dépasser 80 caratères\n",
-    "- si vous comptez diffuser votre code, il est conseillé d'utiliser l'anglais"
+    "- Les docstrings ne devraient pas dépasser 80 caratères.\n",
+    "- Si vous comptez diffuser votre code, il est conseillé d'utiliser l'anglais."
    ]
   },
   {
@@ -165,12 +192,12 @@
     "\n",
     "```python\n",
     "def multiplication(arg_1, arg_2):\n",
-    "    \"\"\"multiplie deux nombres et retourne le résulats\n",
+    "    \"\"\"multiplie deux nombres et retourne le résulat\n",
     "    \n",
     "    :param arg_1: le premier nombre\n",
     "    :param arg_2: le deuxième nombre\n",
     "    :type arg_1: float\n",
-    "    :type arg_1: float\n",
+    "    :type arg_2: float\n",
     "    :return: resultat de la multiplication\n",
     "    :rtype: float\n",
     "    \n",
@@ -196,9 +223,12 @@
     "## Le module [SPHINX](http://www.sphinx-doc.org/en/stable/)\n",
     "\n",
     "- permet \n",
-    "    + de créer la documentation d'un code en utilisant le format RST\n",
-    "    + peut convertir la documentation au format PDF, HTML, epub\n",
-    "    + c'est l'outil à utiliser pour partager sa documentation sur le site [readthedocs](https://readthedocs.org/)\n"
+    "    + de créer la documentation d'un code en utilisant le format RST,\n",
+    "    + de convertir la documentation au format PDF, HTML, epub,\n",
+    "    + de mettre des formules mathématiques, des images, ...\n",
+    "    + ...\n",
+    "\n",
+    "C'est l'outil à utiliser pour partager sa documentation sur le site [readthedocs](https://readthedocs.org/).\n"
    ]
   },
   {
@@ -323,21 +353,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
