--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_5_argparse.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_5_argparse.ipynb
@@ -37,11 +37,12 @@
     "\n",
     "- il appartient à la bibliothèque standard de python\n",
     "- il permet de :\n",
-    "    + définir les argument obligatoires\n",
-    "    + définir les arguments optionnels\n",
-    "    + vérifier le type des arguments\n",
-    "    + vérifier l'existence des fichiers fourni en entré\n",
-    "    + générer automatiquement l'aide"
+    "    + définir les argument obligatoires,\n",
+    "    + définir les arguments optionnels,\n",
+    "    + vérifier le type des arguments,\n",
+    "    + vérifier l'existence des fichiers fournis en entrée,\n",
+    "    + générer automatiquement l'aide, \n",
+    "    + ..."
    ]
   },
   {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -76,6 +77,7 @@
    "source": [
     "%%file ./exemples/parser.py\n",
     "\n",
+    "# coding: utf8\n",
     "import sys\n",
     "import argparse\n",
     "\n",
@@ -86,9 +88,9 @@
     "        description='programme qui affiche sur 2 entiers'\n",
     "    )\n",
     "    \n",
-    "    # ajout d'arguments obligatoire\n",
+    "    # ajout d'un argument obligatoire\n",
     "    parser.add_argument(\n",
-    "        'entier_1',  # nom par lequel nous allon pouvoir accéder à la variable\n",
+    "        'entier_1',  # nom par lequel nous allons pouvoir accéder à la variable\n",
     "        type=int,    # type de la variable\n",
     "        help='un entier'  # affichage de l'aide\n",
     "    )\n",
@@ -97,7 +99,7 @@
     "        type=int,\n",
     "        help='un deuxième entier'\n",
     "    )\n",
-    "    # ajout d'argument obligatoire avec choix\n",
+    "    # ajout d'un argument obligatoire avec choix\n",
     "    parser.add_argument(\n",
     "        'operateur',\n",
     "        type=str,\n",
@@ -140,47 +142,12 @@
     }
    },
    "source": [
-    "Si on ne fourni pas les options obligatoire argparse affiche automatiquement une erreurs avec une aide"
+    "Si on ne fournit pas les options obligatoires, argparse affiche automatiquement une erreur avec une aide."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: parser.py [-h] [--message MESSAGE] entier_1 entier_2 {-,+,/,*}\n",
-      "parser.py: error: the following arguments are required: entier_1, entier_2, operateur\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "python exemples/parser.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "On peut affiche l'aide avec l'option \"-h\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -192,24 +159,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: parser.py [-h] [--message MESSAGE] entier_1 entier_2 {-,+,/,*}\n",
-      "\n",
-      "programme qui affiche sur 2 entiers\n",
-      "\n",
-      "positional arguments:\n",
-      "  entier_1           un entier\n",
-      "  entier_2           un deuxième entier\n",
-      "  {-,+,/,*}\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help         show this help message and exit\n",
-      "  --message MESSAGE  affiche la chaîne de caractère\n"
+      "usage: parser.py [-h] [--message MESSAGE] entier_1 entier_2 {-,+,/,*}\r\n",
+      "parser.py: error: too few arguments\r\n"
      ]
     }
    ],
    "source": [
-    "%%bash\n",
-    "python exemples/parser.py -h"
+    "!python exemples/parser.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "On peut afficher l'aide avec l'option \"-h\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: parser.py [-h] [--message MESSAGE] entier_1 entier_2 {-,+,/,*}\r\n",
+      "\r\n",
+      "programme qui affiche sur 2 entiers\r\n",
+      "\r\n",
+      "positional arguments:\r\n",
+      "  entier_1           un entier\r\n",
+      "  entier_2           un deuxième entier\r\n",
+      "  {-,+,/,*}\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help         show this help message and exit\r\n",
+      "  --message MESSAGE  affiche la chaîne de caractère\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python exemples/parser.py -h"
    ]
   },
   {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -237,43 +237,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "opération à faire :\n",
-      "24 * 8\n",
-      "multiplication\n"
+      "opération à faire :\r\n",
+      "24 * 8\r\n",
+      "multiplication\r\n"
      ]
     }
    ],
    "source": [
-    "%%bash\n",
-    "python exemples/parser.py 24 8 '*' --message multiplication"
+    "!python exemples/parser.py 24 8 '*' --message multiplication"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si on fournit un flottant à la place des entiers, l'erreur va être détectée"
+    "Si on fournit un flottant à la place des entiers, l'erreur va être détectée."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: parser.py [-h] [--message MESSAGE] entier_1 entier_2 {-,+,/,*}\n",
-      "parser.py: error: argument entier_1: invalid int value: '24.5'\n"
+      "usage: parser.py [-h] [--message MESSAGE] entier_1 entier_2 {-,+,/,*}\r\n",
+      "parser.py: error: argument entier_1: invalid int value: '24.5'\r\n"
      ]
     }
    ],
    "source": [
-    "%%bash\n",
-    "python exemples/parser.py 24.5 8.5 '*' --message multiplication"
+    "!python exemples/parser.py 24.5 8.5 '*' --message multiplication"
    ]
   },
   {
@@ -286,12 +284,13 @@
    "source": [
     "## Options avancées\n",
     "\n",
-    "le module argparse dispose aussi d'options plus avancées (que nous ne verrons pas ici)\n",
+    "Le module argparse dispose aussi d'options plus avancées (que nous ne verrons pas ici)\n",
     "\n",
-    "- définition de nos propre vérificateur d'argument (par exemple vérifier le format d'une date)\n",
-    "- avoir des arguments d'entrée multiple qu'il accumule dans une liste\n",
-    "- gérer les drapeaux\n",
-    "- associer des actions à des arguments"
+    "- définition de nos propres vérificateurs d'arguments (par exemple vérifier le format d'une date),\n",
+    "- avoir des arguments d'entrée multiples qu'il accumule dans une liste,\n",
+    "- gérer les drapeaux,\n",
+    "- associer des actions à des arguments,\n",
+    "- ..."
    ]
   },
   {
@@ -416,21 +415,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
