--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_1_style.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_1_style.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "- Les bonnes pratiques et les conventions de style de python sont défini dans plusieurs document:\n",
+    "- Les bonnes pratiques et les conventions de style de python sont définies dans plusieurs documents:\n",
     "    \n",
     "    * [PEP 20](https://www.python.org/dev/peps/pep-0020/) : la philosophie du langage\n",
     "    * [PEP 8](https://www.python.org/dev/peps/pep-0008) : les conventions de lisibilité (de style)\n",
@@ -50,8 +50,7 @@
     "## Intérêt du PEP 8\n",
     "\n",
     "- Un code est lu beaucoup plus souvent qu'il n'est écrit (Guido Van Rossum)\n",
-    "- Maximiser la lisibilité du code\n",
-    "    + facilite le travail à plusieurs"
+    "- Maximiser la lisibilité du code facilite le travail à plusieurs"
    ]
   },
   {
@@ -132,7 +131,7 @@
    "source": [
     "### PEP 8 : Lignes (2/2)\n",
     "\n",
-    "Pour les fonctions, on \n",
+    "Pour les fonctions, \n",
     "```python\n",
     "valeur = nom_de_fonction(argument_1,\n",
     "                         'argument_2',\n",
@@ -245,7 +244,7 @@
     "### PEP 8: Les imports\n",
     "\n",
     "- on ne doit faire qu'un import par ligne\n",
-    "- on ordonne les imports et on sépare les groupe d'une ligne\n",
+    "- on ordonne les imports et on sépare les groupes d'une ligne\n",
     "    - import des modules de la bibliothèque standard\n",
     "    - import des modules hors bibliothèque standard\n",
     "    - import des modules de notre projet\n",
@@ -426,21 +425,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
