--- a/python/session-2016-03-idf/1_fonctions/ellipsoides/enonce/synope_session_2016_03_idf-TP1.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/ellipsoides/enonce/synope_session_2016_03_idf-TP1.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "### Superellipse\n",
     "\n",
-    "L'équation d'une superellipse est donnée par la formule suivante pour $-\\pi \\leq \\theta \\leq \\pi$\n",
+    "L'équation d'une superellipse est donnée par la formule suivante pour $0 \\leq \\theta \\leq 2\\pi$\n",
     "\n",
     "$$\n",
     "\\left\\{\n",
@@ -198,7 +198,7 @@
     "#### Question 2\n",
     "Ecrivez deux fonctions *spe_cos()* et *spe_sin()* qui prennent en paramètres $\\theta$ et $r$ et qui renvoient respectivement $|cos \\theta |^r sign(cos \\theta)$ et $|sin \\theta |^r sign(sin \\theta)$.\n",
     "On utilisera les fonctions :\n",
-    "- *abs()*\n",
+    "- \\*\\*\n",
     "- *math.cos()*\n",
     "- *math.sin()*\n",
     "- *math.copysign()*"
@@ -212,9 +212,9 @@
     "\n",
     "A l'aide des deux fonctions précédentes, vous pouvez à présent écrire la fonction *superellipse()* qui prend en paramètres les rayons $r_x$ et $r_y$, ainsi que le réel $m$.\n",
     "\n",
-    "Plutôt que de donner également en paramètre la valeur de $\\theta$, on donnera un nombre de points de discrétisation, et en vous inspirant de la fonction *linspace()*, on affichera à l'écran les valeurs des coordonnées $x$ et $y$ de la superellipse, pour les différentes valeurs discrétisées de $\\theta$ sur l'intervalle $[-\\pi, \\pi]$.\n",
+    "Plutôt que de donner également en paramètre la valeur de $\\theta$, on donnera un nombre de points de discrétisation, et en vous inspirant de la fonction *linspace()*, on affichera à l'écran les valeurs des coordonnées $x$ et $y$ de la superellipse, pour les différentes valeurs discrétisées de $\\theta$ sur l'intervalle $[0, 2\\pi]$.\n",
     "\n",
-    "Vérifiez que l'appel à\n",
+    "En fin de compte, les arguments de `superellipse()` seront donc : nombre de points de discrétisation $n$, $r_x$, $r_y$, $m$. Vérifiez que l'appel à\n",
     "```python\n",
     "superellipse(5,1,1,2)\n",
     "```\n",
@@ -273,7 +273,7 @@
     "\n",
     "Supprimez les affichages de *superellipse()* et retournez à la place un tuple de deux éléments : la liste imbriquée des *x*, et la liste des *y*.\n",
     "\n",
-    "Procédez de même avec *superellipsoides()*."
+    "Procédez de même avec *superellipsoides()* (mais notez que cette fois, à cause de la discrétisation selon deux angles, les *x* et mes *y* sont des listes de listes...)."
    ]
   },
   {
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
